--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
+# Data not to be shared
+.env
+credentials.csv
+
 # Logs
 logs
 *.log
-
-# env
-.env
 
 # Runtime data
 pids
@@ -26,8 +27,9 @@ coverage
 build/Release
 
 # Dependency directory
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
+# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
 # Debug log from npm
 npm-debug.log
+
