--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-  "name": "express-multer",
+  "name": "packRat-backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "aws-sdk": "^2.1.45",
+    "aws-sdk": "^2.2.19",
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
+    "connect-mongo": "^0.8.2",
+    "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "express": "~4.13.1",
-    "file-type": "^2.10.2",
-    "mongoose": "^4.1.3",
+    "express-session": "^1.12.1",
+    "hbs": "~3.1.0",
+    "mongoose": "^4.2.8",
+    "mongoose-unique-validator": "^0.6.1",
     "morgan": "~1.6.1",
-    "multer": "^1.0.3"
+    "multer": "^1.1.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.3.0",
+    "uuid": "^2.0.1"
+  },
+  "devDependencies": {
+    "errorhandler": "^1.4.2"
   }
 }
-
